[package]
name = "flt-mover"
version = "0.5.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
notify = "4.0"
log = "0.4"
logsetup = { path = "../logsetup" }
structopt = "0.3.8"
