[package]
name = "flt2vhs"
version = "0.5.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
humansize = "1.0"
log = "0.4"
logsetup = { path = "../logsetup" }
memmap = "0.7"
rayon = "1.4"
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3.8"
