[package]
name = "flt2vhs"
version = "0.8.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
humansize = "1.0"
log = "0.4"
logsetup = { path = "../logsetup" }
memmap = "0.7"
rayon = "1.4"
rustc-hash = "1.1"
structopt = "0.3.8"
