[package]
name = "logsetup"
version = "0.1.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
structopt = "0.3.8"

[dependencies.simplelog]
git = "https://github.com/mrkline/simplelog.rs"
rev = "523355a2d12b0a9c052f4d9ce2e8a26ad00cf719"
features = ["test", "termcolor"]
