[package]
name = "logsetup"
version = "0.1.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
structopt = "0.3.8"

[dependencies.simplelog]
version = "0.10.2"
features = ["test", "termcolor"]
