[package]
name = "patch-bms-novhs"
version = "0.13.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
logsetup = { path = "../logsetup" }
memmap = "0.7"
pelite = "0.9.0"
structopt = "0.3.8"

[target.'cfg(windows)'.dependencies]
registry = "1.1"
