[package]
name = "vhscat"
version = "0.1.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

[profile.dev]
opt-level = 2 # We want optimization even for debug builds for all the hashing.
incremental = true # Iterate faster

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.simplelog]
version = "0.7"
features = ["test"]
