[package]
name = "vhscat"
version = "0.8.0"
authors = ["Matt Kline <matt@bitbashing.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
logsetup = { path = "../logsetup" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.8"
